Added VAT notice

--- a/sponsor.html
+++ b/sponsor.html
@@ -263,6 +263,11 @@
                   <tr class="discount">
                     <td class="firstTd">Saving</td><td>- 5,077.50€</td><td>- 2.472.50€</td><td>- 1,100€</td><td>- 27.50€</td>
                   </tr>
+                  <tr class="choose">
+                  	<td class="firstTd" colspan="5">
+                  		Unlike previous years, we <b>don't charge VAT</b> this, with the above presented value being the <b>final value</b> of each package.
+                  	</td>
+                  </tr>
 									<tr class="perks">
 										<td class="firstTd" colspan="5"><h3>Perks</h3></td>
 									</tr>
