corrected VAT text copy

--- a/sponsor.html
+++ b/sponsor.html
@@ -265,7 +265,7 @@
                   </tr>
                   <tr class="choose">
                   	<td class="firstTd" colspan="5">
-                  		Unlike previous years, we <b>don't charge VAT</b> this, with the above presented value being the <b>final value</b> of each package.
+                  		Unlike previous years, we <b>don't charge VAT</b> this year, with the above presented value being the <b>final value</b> of each package.
                   	</td>
                   </tr>
 									<tr class="perks">
